# attiny_relay2

./: .gitignore  Makefile  README.md  pyproject.toml
firmware/: Makefile  main.c  usbconfig.h
mcp-usb-relay/: server.py
mcp_usb_relay/: server.py
python/relay_control/: relay.py
python/tests/: test_relay.py
relay_control/: __init__.py  lsrelay.py
tests/: test_relay.py
